--- a/org.eclipse.kura.dnomaid.iot.mqtt/build.properties
+++ b/org.eclipse.kura.dnomaid.iot.mqtt/build.properties
@@ -1,7 +1,8 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               resources/plugins/org.eclipse.paho.client.mqttv3_1.2.2.jar
 source.. = src/
 additional.bundles = org.eclipse.osgi.services,\
                      slf4j.api,\
