--- a/org.eclipse.kura.dnomaid.iot.mqtt/build.properties
+++ b/org.eclipse.kura.dnomaid.iot.mqtt/build.properties
@@ -2,11 +2,11 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               resources/plugins/org.eclipse.paho.client.mqttv3_1.2.2.jar
+               resources/plugins/org.eclipse.paho.client.mqttv3_1.2.2.jar,\
+               lib/org.eclipse.paho.client.mqttv3-1.2.5.jar
 source.. = src/
 additional.bundles = org.eclipse.osgi.services,\
                      slf4j.api,\
-                     org.eclipse.paho.client.mqttv3,\
                      org.eclipse.osgi.util,\
                      org.eclipse.kura.api,\
                      com.google.gson,\
